# promptsmith-cli

./: .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BUILD.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  SECURITY.md  TROUBLESHOOTING.md  build_cli.sh  build_windows.bat  config.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: apply-post-release-hygiene.yml  ci.yml  consolidate-entrypoint-once.yml  fix-exec.yml  portable-builds.yml
docs/: TROUBLESHOOTING.md  V1_READINESS.md  V1_RELEASE_NOTES_DRAFT.md
docs/adr/: 0001-backend-lifecycle-and-orchestration.md
docs/releases/: 1.0.0.md
src/: __init__.py
src/promptsmith/: __init__.py  _version.py
src/promptsmith/cli/: __init__.py  app.py  launcher.py
src/promptsmith/core/: __init__.py  config.py  config_store.py  exceptions.py  history.py  models.py  pipeline.py  profile.py  profiles.py  prompt_analyzer.py  refiner.py  runtime_model_fixes.py  schemas.py  templates.py
src/promptsmith/core/backends/: __init__.py  hybrid_backend.py  llm_backend.py  rule_backend.py  rule_based.py
src/promptsmith/core/plugins/: __init__.py
src/promptsmith/data/profiles/: adobe-experience-developer.yaml  aem-developer.yaml  apigee-developer.yaml  business-analyst.yaml  cloud-engineer-aws.yaml  cloud-engineer-azure.yaml  cloud-engineer-gcp.yaml  customer-portal-architect.yaml  elastic-developer.yaml  etl-developer-informatica.yaml  executive.yaml  financial-analyst.yaml  general.yaml  hr-manager.yaml  it-operations.yaml  lawyer.yaml  marketing-manager.yaml  microservices-spring-boot-developer.yaml  nextjs-aem-developer.yaml  nextjs-developer.yaml  product-manager.yaml  project-manager.yaml  react-aem-developer.yaml  react-developer.yaml  recruiter.yaml  research-analyst.yaml  safe-agile-coach.yaml  safe-product-owner.yaml  safe-release-train-engineer.yaml  safe-scrum-master.yaml  sales-manager.yaml  senior-architect.yaml  solution-architect.yaml  technical-writer.yaml  vibe-coding.yaml
src/promptsmith/data/templates/: api-spec.yaml  architecture-diagram.yaml  aws-cloudformation.yaml  business-case.yaml  change-request.yaml  contract-review.yaml  elastic-query.yaml  email-draft.yaml  etl-mapping.yaml  hr-policy.yaml  incident-response.yaml  job-description.yaml  nextjs-app.yaml  prd.yaml  problem-management.yaml  react-component.yaml  retrospective.yaml  safe-pi-planning.yaml  spring-boot-microservice.yaml  swot-analysis.yaml  terraform-module.yaml  user-story.yaml
src/promptsmith/scripts/: __init__.py  export.py  model_catalog.py  package_models.py
src/promptsmith/utils/: __init__.py  filesystem.py  path_utils.py  system_utils.py
src/promptsmith/webui/: README.md
src/tests/: test_app.py  test_backend_architecture.py  test_config.py  test_export.py  test_history.py  test_history_security.py  test_hybrid_backend.py  test_llm_backend.py  test_llm_backend_robustness.py  test_llm_security.py  test_model_catalog_fallback.py  test_model_validation.py  test_models.py  test_network_boundaries.py  test_package_models.py  test_path_utils.py  test_pipeline.py  test_plugins_security.py  test_profile_editor_and_model_switch.py  test_profiles.py  test_prompt_analyzer.py  test_refiner.py  test_refiner_architecture.py  test_release_candidate_fixes.py  test_runtime_security_boundaries.py  test_schemas.py  test_templates.py  test_version_and_about.py
tools/: export.py  get_version.py  package_models.py  prepare_portable_artifact.py  validate_release.py
