[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsmith-cli"
# Single source of truth for the version. Everything else - the About
# screen, --version, build script artifact names - reads this value at
# install/build time. Bump it here and only here.
version = "0.6.0b2"
description = "PromptSmith-cli: a local-first prompt quality gateway. 100% open source, local only, zero commercial dependencies."
authors = [{name = "Prozak"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["prompt-engineering", "tui", "llm", "local-first", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]
dependencies = [
    "textual>=8.2,<9",
    "pyyaml>=6.0.3",
    "pyperclip>=1.11.0",
    "psutil>=7.2.0",
    "requests>=2.34.0",
    "tqdm>=4.68.0",
]

[project.urls]
Homepage = "https://codeberg.org/prozak/promptsmith-cli"
Issues = "https://codeberg.org/prozak/promptsmith-cli/issues"
Changelog = "https://codeberg.org/prozak/promptsmith-cli/src/branch/main/CHANGELOG.md"

[project.optional-dependencies]
llm = ["llama-cpp-python>=0.3.30"]
dev = [
    "pytest>=9.1.0",
    "pytest-cov>=7.1.0",
    "black>=26.5.0",
    "isort>=8.0.0",
    "ruff>=0.15.0",
    "mypy>=2.3.0",
    "pre-commit>=4.6.0",
]
build = ["pyinstaller>=6.21.0"]

[project.scripts]
promptsmith = "promptsmith.cli.app:main"
promptsmith-cli = "promptsmith.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
# Built-in profiles and templates ship inside the package
# (src/promptsmith/data/), so plain wheel installs get them too - the
# old top-level location was invisible to setuptools packaging.
promptsmith = ["data/profiles/*.yaml", "data/templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["promptsmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "Q",   # flake8-quotes
    "RUF", # ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true
