[build-system]
requires = ["setuptools==83.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "promptsmith-cli"
version = "0.6.0b2"
description = "PromptSmith-cli: a local-first prompt quality gateway with deterministic analysis and local SLM refinement."
authors = [{name = "Prozak"}]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10,<3.15"
keywords = ["prompt-engineering", "tui", "llm", "slm", "local-first", "textual"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Text Processing",
]
dependencies = [
    "textual==8.2.8",
    "PyYAML==6.0.3",
    "pyperclip==1.11.0",
    "psutil==7.2.2",
    "requests==2.34.2",
    "tqdm==4.69.0",
    "llama-cpp-python==0.3.34",
    "huggingface-hub==0.34.3",
]

[project.urls]
Homepage = "https://github.com/pr0z4k/promptsmith-cli"
Issues = "https://github.com/pr0z4k/promptsmith-cli/issues"
Changelog = "https://github.com/pr0z4k/promptsmith-cli/blob/main/CHANGELOG.md"
Source = "https://github.com/pr0z4k/promptsmith-cli"

[project.optional-dependencies]
# Kept as a compatibility alias for existing install instructions. Local SLM
# support is now part of the standard installation rather than an optional
# feature that leaves hybrid/LLM profiles unusable.
llm = []
dev = [
    "pytest==9.1.1",
    "pytest-cov==7.1.0",
    "black==26.5.1",
    "isort==8.0.1",
    "ruff==0.15.22",
    "mypy==2.3.0",
    "pre-commit==4.6.1",
]
build = [
    "build==1.5.0",
    "pyinstaller==6.21.0",
    "twine==6.2.0",
]

[project.scripts]
promptsmith = "promptsmith.cli.app:main"
promptsmith-cli = "promptsmith.cli.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
promptsmith = ["data/profiles/*.yaml", "data/templates/*.yaml"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312", "py313", "py314"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.pytest_cache
    | \.ruff_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["promptsmith"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "N",
    "W",
    "UP",
    "B",
    "C4",
    "Q",
    "RUF",
]
ignore = [
    "E501",
    "B008",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "9.1"
testpaths = ["src/tests"]
addopts = ["--strict-config", "--strict-markers"]
